// Copyright 2015, Google Inc.
// All rights reserved.

syntax = "proto3";

package tugas3pat;

option java_multiple_files = true;
option java_package = "com.ganesus.pat.tugas3";
option java_outer_classname = "ChatProto";

// The greeting service definition.
service Chat {
  rpc SetNick (NickRequest) returns (StatusResponse) {}
  rpc GetMessages (NickRequest) returns (MessageResponse) {}
  rpc Join (ChannelRequest) returns (StatusResponse) {}
  rpc Leave (ChannelRequest) returns (StatusResponse) {}
  rpc SendTo (SendToRequest) returns (StatusResponse) {}
  rpc SendAll (SendAllRequest) returns (StatusResponse) {}
}

message NickRequest {
  string nick = 1;
}

message ChannelRequest {
  string channel = 1;
  string nick = 2;
}

message SendToRequest {
  string message = 1;
  string channel = 2;
  string nick = 3;
}

message SendAllRequest {
  string message = 1;
  string nick = 2;
}

message StatusResponse {
  bool status = 1;
}

message MessageResponse {
  repeated string message = 1;
}